# blog_skin-catalog

./: .gitignore  Makefile  README.md  pyproject.toml
sc_blog/: manage.py
sc_blog/sc_blog/: asgi.py  urls.py  wsgi.py
sc_blog/sc_blog/settings/: base.py  development.py  production.py
website_config/: deploy.sh
